@@ -3,38 +3,38 @@
     icon = "minecraft:cooked_beef"
     color = "#d4781c"
     order = 0
-    default_value = 0.0
-    gain_multiplier = 1.0
-    decay_multiplier = 1.0
+    default_value = 0.7
+    gain_multiplier = 0.1
+    decay_multiplier = 0.1
 [[groups]]
     name = "grains"
     icon = "minecraft:bread"
     color = "#d4a31c"
     order = 0
-    default_value = 0.0
-    gain_multiplier = 1.0
-    decay_multiplier = 1.0
+    default_value = 0.7
+    gain_multiplier = 0.1
+    decay_multiplier = 0.1
 [[groups]]
     name = "vegetables"
     icon = "minecraft:carrot"
     color = "#31d41c"
     order = 0
-    default_value = 0.0
-    gain_multiplier = 1.0
-    decay_multiplier = 1.0
+    default_value = 0.7
+    gain_multiplier = 0.1
+    decay_multiplier = 0.1
 [[groups]]
     name = "fruits"
     icon = "minecraft:apple"
     color = "#d41c53"
     order = 0
-    default_value = 0.0
-    gain_multiplier = 1.0
-    decay_multiplier = 1.0
+    default_value = 0.7
+    gain_multiplier = 0.1
+    decay_multiplier = 0.1
 [[groups]]
     name = "sugars"
     icon = "minecraft:honey_bottle"
     color = "#ff8fe9"
     order = 1
-    default_value = 0.0
-    gain_multiplier = 1.0
-    decay_multiplier = 1.0
+    default_value = 0.7
+    gain_multiplier = 0.1
+    decay_multiplier = 0.1
