@@ -2,13 +2,13 @@
 [death_penalty]
 	#The reduction in percentage applied to all diet groups upon death.
 	#Range: 0.0 ~ 1.0
-	deathPenaltyLoss = 1.0
+	deathPenaltyLoss = 0.5
 	#The method to apply for losses due to death penalties.
 	#AMOUNT = Reduce by a flat percentage amount
 	#PERCENT = Reduce by a percent of the current value
 	#RESET = Reset value to defaults
 	#Allowed Values: AMOUNT, PERCENT, RESET
-	deathPenaltyMethod = "AMOUNT"
+	deathPenaltyMethod = "PERCENT"
 	#The minimum percentage that diet groups can be reduced to upon death.
 	#Range: 0.0 ~ 1.0
 	deathPenaltyMin = 0.0
