@@ -1,14 +1,0 @@
-D:default=120.0 -> RADIOISOTOPEGENERATOR_VOLTAGE='120.0'
-D:default=0.15 -> RADIOISOTOPEGENERATOR_OUTPUT_MULTIPLIER='0.15000000596046448'
-D:default=500000.0 -> FISSIONREACTOR_MAXENERGYTARGET='500000.0'
-D:default=4000000.0 -> FUSIONREACTOR_MAXENERGYTARGET='4000000.0'
-D:default=50000.0 -> FUSIONREACTOR_USAGE_PER_TICK='50000.0'
-D:default=2.0E7 -> PARTICLEINJECTOR_USAGE_PER_PARTICLE='2.0E7'
-I:default=1024 -> FUSIONREACTOR_MAXSTORAGE='1024'
-I:default=2500 -> REACTOR_RADIATION_PER_FUEL='2500'
-D:default=750.0 -> CHEMICALBOILER_USAGE_PER_TICK='750.0'
-I:default=800 -> CHEMICALBOILER_REQUIRED_TICKS='800'
-D:default=750.0 -> CHEMICALEXTRACTOR_USAGE_PER_TICK='750.0'
-I:default=400 -> CHEMICALEXTRACTOR_REQUIRED_TICKS='400'
-D:default=1500.0 -> GASCENTRIFUGE_USAGE_PER_TICK='1500.0'
-I:default=20 -> GASCENTRIFUGE_REQUIRED_TICKS_PER_PROCESSING='20'
