@@ -1,12 +1,6 @@
 {
   "temperature_modifiers": [
 		{
-			"condition": "survive:on_fire",
-			"temperature": 2.25,
-			"fireTimer": 1,
-			"operation": ">"
-		},
-		{
 			"condition": "survive:default",
 			"temperature": 0
 		}
