@@ -1,14 +1,8 @@
 {
   "temperature_modifiers": [
 		{
-			"condition": "survive:on_fire",
-			"temperature": 4.05,
-			"fireTimer": 1,
-			"operation": ">"
-		},
-		{
 			"condition": "survive:default",
-			"temperature": 0.5
+			"temperature": 0
 		}
 	],
   "weight_modifier": 0.6
